small alignment fix

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,6 +15,9 @@ a {
 .App {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 35%;
     gap: 2rem;
     position: relative;
     min-height: 100vh;
@@ -56,7 +59,6 @@ a {
         }
     }
     main {
-        margin: auto;
 
         // card
         .card {
